--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "writing-assistant",
-  "version": "0.0.0",
+  "version": "0.1",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -9,7 +9,11 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@azure/openai": "^1.0.0-beta.6",
+    "@ckeditor/ckeditor5-build-classic": "^40.0.0",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@mdi/font": "7.0.96",
+    "ai": "^2.2.16",
     "core-js": "^3.29.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
