--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mdi/font": "^7.3.67",
     "ai": "^2.2.17",
     "openai": "^4.12.4",
+    "prettier": "^3.0.3",
     "sass": "^1.69.4",
     "vuetify": "^3.4.0-alpha.1"
   }
