--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@mdi/font": "^7.3.67",
     "ai": "^2.2.17",
+    "axios": "^1.6.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.32.0",
     "openai": "^4.12.4",
     "prettier": "^3.0.3",
     "sass": "^1.69.4",
+    "universal-cookie": "^6.1.1",
     "vuetify": "^3.4.0-alpha.1"
   }
 }
